<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Z-school</string>
    <string name="start_learning">Начать обучение</string>
    <string name="continue_learning">Продолжить обучение</string>
    <string name="level_locked_title">Уровень недоступен</string>
    <string name="level_locked_message">Этот уровень пока недоступен. Сначала завершите предыдущие уровни.</string>
    <string name="ok">OK</string>
    <string name="title_home">Домой</string>
    <string name="title_rating">Рейтинг</string>
    <string name="title_achievements">Достижения</string>
    <string name="title_profile">Профиль</string>
    <string name="avatar">Avatar</string>
    <string name="course">Курс</string>
    <string name="login">Логин</string>
    <string name="accessibility_back">Назад</string>
    <string name="accessibility_close">Закрыть</string>
    <string name="accessibility_edit_profile">Редактировать профиль</string>
    <string name="accessibility_notifications">Уведомления</string>
    <string name="points_format" tools:ignore="PluralsCandidate">%d points</string>
    <string name="status_icon">Status Icon</string>
    <string name="courses_header">Курсы</string>
    <string name="trueCount">Иконка правильных ответов</string>
    <string name="TimerIcon">Иконка времени</string>
    <string name="_00_00">00:00</string>
    <string name="continueButton">Продолжить</string>
    <string name="_0">0</string>
    <string name="PointsIcon">Иконка поинтов</string>
    <string name="_0percent">0%</string>
    <string name="lessonCompleted">Урок завершён</string>
    <string name="motivationImage">Мотивационное изображение</string>
    <string name="motivationPhrase">Мотивирующая фраза</string>
    <string name="mainLogo">mainLogo</string>
    <string name="BackgroundLogo">backgroundLogo</string>
    <string name="ivCompleted">ivCompleted</string>
    <string name="user_full_name">Фамилия Имя Отчество</string>
    <string name="totalProgress">Общий прогресс</string>
    <string name="totalPoints">Всего поинтов: 0</string>
    <string name="completedCourses">Пройденных курсов: 0</string>
    <string name="preview_text">Пример текста</string>
    <string name="system_font_size">Системный размер текста</string>
    <string name="cancel">Отмена</string>
    <string name="apply">Применить</string>
    <string name="background_logo_description">Фоновый логотип приложения</string>
    <string name="main_logo_description">Основной логотип приложения</string>
    <string name="email_hint">Введите email</string>
    <string name="password_hint">Введите пароль</string>
    <string name="confirm_password_hint">Подтвердите пароль</string>
    <string name="register_button">Зарегистрироваться</string>
    <string name="login_button">Войти в аккаунт</string>
    <string name="status_icon_description">Иконка статуса</string>
    <string name="lesson">Урок</string>
    <string name="avatar_second_place">Аватар второго места</string>
    <string name="avatar_first_place">Аватар первого места</string>
    <string name="avatar_third_place">Аватар третьего места</string>
    <string name="general_progress">Общий прогресс</string>
    <string name="progress_percent">0%%</string>
    <string name="edit_profile">Редактировать профиль</string>
    <string name="notifications">Уведомления</string>
    <string name="back">Назад</string>
    <string name="close">Закрыть</string>
    <string name="personalization">Персонализация</string>
    <string name="dark_theme">Тёмная тема</string>
    <string name="sounds">Звуки</string>
    <string name="text_size">Размер текста</string>
    <string name="change_text_size">Изменить размер текста</string>
    <string name="logout_button">Выйти из аккаунта</string>
    <string name="question_label">Вопрос</string>
    <string name="question_image_description">Изображение вопроса</string>
    <string name="next_button">Следующий</string>
    <string name="avatar_description">Аватар пользователя</string>
    <string name="personal_data">Личные данные</string>
    <string name="login_hint">Логин</string>
    <string name="last_name_hint">Фамилия</string>
    <string name="first_name_hint">Имя</string>
    <string name="middle_name_hint">Отчество</string>
    <string name="security">Безопасность</string>
    <string name="email_label">Email:</string>
    <string name="reset_password">Сбросить пароль</string>
    <string name="save_changes">Сохранить</string>
    <string name="forgotPassword">Забыли пароль?</string>
    <string name="update_avatar">Обновление аватара</string>
    <string name="pdfimage">pdfImage</string>
    <string name="backButton">Назад</string>
    <string name="pageNum">Страница 1 из 1</string>
    <string name="next">Дальше</string>
    <string name="exitbutton">exitButton</string>
    <string name="exerciseName">Название упражнения</string>
    <string name="exerciseDescription">Описание упражнения</string>
    <string name="points">Points</string>
    <string name="loadQuestions">Загрузить вопросы</string>
    <string name="FullName">ФИО</string>
    <string name="achieved">Достижений: 0/0</string>

    <!-- Новые строки -->
    <string name="error_invalid_email_format">Введите корректный email</string>
    <string name="error_enter_email">Введите email</string>
    <string name="error_enter_login">Введите логин</string>
    <string name="error_enter_password">Введите пароль</string>
    <string name="error_password_requirements">Пароль должен содержать минимум 8 символов, одну заглавную букву, одну маленькую букву, одну цифру и один специальный символ</string>
    <string name="error_confirm_password">Подтвердите пароль</string>
    <string name="error_passwords_do_not_match">Пароли не совпадают</string>
    <string name="error_enter_code">Введите код</string>
    <string name="error_enter_confirmation_code">Введите код подтверждения</string>
    <string name="error_enter_new_password">Введите новый пароль</string>
    <string name="error_generic_with_message">Ошибка: %1$s</string>
    <string name="error_loading_profile_with_message">Ошибка загрузки профиля: %1$s</string>
    <string name="error_updating_profile_with_message">Ошибка обновления профиля: %1$s</string>

    <string name="toast_enter_email_for_reset">Введите email в поле логина</string>
    <string name="toast_verification_code_sent">Код подтверждения отправлен</string>
    <string name="toast_email_verified_successfully">Почта подтверждена</string>
    <string name="toast_email_verified_successfully_redirect_login">Почта подтверждена. Теперь вы можете войти.</string>
    <string name="toast_password_reset_cancelled">Сброс пароля отменен</string>
    <string name="toast_password_reset_successfully">Пароль успешно сброшен</string>
    <string name="toast_crop_error">Ошибка обрезки изображения</string>
    <string name="toast_avatar_updated_successfully">Аватар обновлен</string>
    <string name="toast_error_uploading_avatar_code">Ошибка загрузки аватара (код: %1$d)</string>
    <string name="toast_error_uploading_avatar_exception">Ошибка загрузки аватара: %1$s</string>
    <string name="toast_error_file_not_found_for_upload">Файл для загрузки не найден</string>
    <string name="toast_error_auth_token_missing">Отсутствует токен авторизации</string>
    <string name="toast_email_not_found_for_reset">Email не найден. Невозможно сбросить пароль.</string>
    <string name="toast_reset_code_sent">Код для сброса пароля отправлен.</string>


    <string name="dialog_title_email_verification">Подтверждение почты</string>
    <string name="dialog_title_reset_password">Сброс пароля</string>
    <string name="dialog_title_error">Ошибка</string>
    <string name="dialog_title_success">Успех</string>

    <string name="button_send_code">Отправить код</string>
    <string name="button_send_code_timed">Отправить код (%1$ds)</string>
    <string name="button_confirm">Подтвердить</string>
    <string name="button_ok">OK</string>

    <string name="header_title_edit_profile">Редактирование</string>
    <string name="text_email_not_found">Email не найден</string>
    <string name="text_you">Ты</string>
    <string name="text_anonymous">Аноним</string>
    <string name="toast_profile_updated_successfully">Профиль успешно обновлен</string>
    <string name="error_loading_users_with_message">Ошибка загрузки пользователей: %1$s</string>
    <string name="error_invalid_email_format_vm">Неверный формат почты</string>
    <string name="error_unknown_vm">Неизвестная ошибка</string>
    <string name="error_logout_failed_vm">Ошибка при выходе</string>
    <string name="error_sending_code_vm">Ошибка отправки кода</string>
    <string name="error_verifying_email_vm">Ошибка подтверждения почты</string>
    <string name="error_resetting_password_vm">Ошибка сброса пароля</string>
    <string name="log_failed_to_load_email">Failed to load email: %1$s</string>
    <string name="error_invalid_login_or_password_repo">Неверный логин или пароль</string>
    <string name="error_invalid_email_format_repo">Неверный формат почты</string>
    <string name="error_server_with_code_repo">Ошибка сервера (%1$d)</string>
    <string name="error_auth_failed_repo">Ошибка авторизации</string>
    <string name="error_parsing_server_response_repo">Ошибка при обработке ответа сервера</string>
    <string name="error_no_internet_connection_repo">Нет подключения к интернету</string>
    <string name="error_server_timeout_repo">Превышено время ожидания ответа от сервера</string>
    <string name="error_auth_exception_repo">Ошибка при авторизации: %1$s</string>
    <string name="error_login_success_empty_body_repo">Успешная авторизация, но сервер вернул пустой ответ</string>
    <string name="info_registration_successful_repo">Регистрация успешна</string>
    <string name="error_registration_success_empty_body_repo">Успешная регистрация, но сервер вернул пустой ответ</string>
    <string name="error_user_already_exists_repo">Пользователь с таким email или логином уже существует</string>
    <string name="error_registration_failed_repo">Ошибка регистрации</string>
    <string name="error_parsing_server_response_repo_malformed">Сервер вернул некорректный ответ</string>
    <string name="error_registration_exception_repo">Ошибка при регистрации: %1$s</string>

    <string name="error_token_refresh_empty_body_repo">Ошибка обновления токена: сервер вернул пустой ответ</string>
    <string name="error_session_expired_relogin_repo">Сессия истекла, требуется повторная авторизация</string>
    <string name="error_token_refresh_failed_repo">Ошибка обновления токена</string>
    <string name="error_token_refresh_exception_repo">Ошибка при обновлении токена: %1$s</string>

    <string name="error_logout_failed_repo">Ошибка при выходе</string>
    <string name="error_logout_exception_repo">Ошибка при выходе: %1$s</string>

    <string name="error_sending_code_failed_repo">Ошибка отправки кода</string>
    <string name="error_email_verification_failed_repo">Ошибка подтверждения почты</string>

    <string name="error_get_email_empty_body_repo">Не удалось получить email: пустой ответ</string>
    <string name="error_auth_required_repo">Требуется авторизация</string>
    <string name="error_email_not_found_repo">Email не найден</string>
    <string name="error_get_email_failed_repo">Ошибка получения email</string>
    <string name="error_get_email_exception_repo">Ошибка при получении email: %1$s</string>

    <string name="error_invalid_confirmation_code_repo">Неверный код подтверждения</string>
    <string name="error_email_not_found_for_reset_repo">Email не найден</string>
    <string name="error_password_reset_failed_with_code_repo">Ошибка сброса пароля (%1$d)</string>
    <string name="error_password_reset_exception_repo">Ошибка при сбросе пароля: %1$s</string>

</resources>