<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black">

    <!-- ImageView для отображения страниц PDF -->
    <ImageView
        android:id="@+id/pdfImageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/controlsPanel"
        android:contentDescription="@string/pdfimage"
        android:scaleType="fitCenter" />

    <!-- Панель управления с кнопками навигации -->
    <LinearLayout
        android:id="@+id/controlsPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="16dp"
        android:background="#80000000"
        android:orientation="horizontal"
        android:padding="8dp">

        <Button
            android:id="@+id/btnPrevPage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/backButton" />

        <TextView
            android:id="@+id/tvPageNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/pageNum"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btnNextPage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/next" />
    </LinearLayout>

    <!-- Кнопка закрытия PDF просмотрщика -->
    <ImageView
        android:id="@+id/ivClosePdf"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentEnd="true"
        android:layout_margin="16dp"
        android:background="@drawable/circle_background"
        android:contentDescription="@string/exitbutton"
        android:padding="12dp"
        android:src="@drawable/ic_close" />

</RelativeLayout>